# pngine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LLM_OVERVIEW.md  NEW_INTERPRETER.md  PLAN.md  README.md  TODO.md  build.zig  build.zig.zon  gemini.md  package.json  playwright.config.js  simple.sh  tsconfig.json  vite.config.ts
demo/: index.html  test-boids.html  test-cmd-buffer-only.html  test-npm-bundle.html  test-textured-cube.html
docs/: 2026-q1-priorities.md  2026-strategic-plan.md  EMITTER_IMPLEMENTATION_PLAN.md  PLAN_WASM_CALL.md  PNG_EMBEDDING_PLAN.md  categorical-shader-composer-plan.md  command-buffer-refactor-plan.md  cpu-wasm-data-initialization-plan.md  data-generation-plan.md  embedded-executor-plan.md  ios-improvement-plan.md  ios-viewer-zig-plan.md  js-api-refactor-plan.md  landing-page-layout-plan.md  llm-runtime-testing-plan.md  miniray-c-archive-plan.md  multiplatform-command-buffer-plan.md  multiplatform-zig-architecture.md  overview.md  playground-template-analysis.md  refactor-plan-zig-mastery.md  remove-pngr-plan.md  remove-wasm-in-wasm-plan.md  runtime-profile-simplification-plan.md  shader-composer-plan.md  shader-minification-plan.md  shader-tool.md  shadertoy-conversion-plan.md  textmate-grammar-plan.md  uniform-reflection-plan.md  video-support-plan.md  webgpu-feature-completeness-plan.md  website-psychology-plan.md  zig-mastery-compliance-plan.md
examples/: README.md  boids.pngine  boids_array_only.pngine  boids_const_data.pngine  (+30 more)
native/android/pngine-android/src/main/jni/: CMakeLists.txt  pngine_jni.c
(+1006 files in other folders)
